--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Perfect ToDo</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <script type="module" crossorigin src="/index-Ll4z8vQq.js"></script>
     <link rel="stylesheet" crossorigin href="/index-wHb4GlmT.css" />
+    <script type="module" crossorigin src="/index-Ll4z8vQq.js"></script>
   </head>
   <body>
     <div id="root"></div>
