--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Perfect ToDo</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <link rel="stylesheet" crossorigin href="/index-wHb4GlmT.css" />
-    <script type="module" crossorigin src="/index-Ll4z8vQq.js"></script>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" type="image/svg+xml" href="/logo.svg"/><title>Perfect ToDo</title><script defer="defer" src="bundle.js"></script></head><body><div id="root"></div><div id="modals"></div></body></html>
